--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
     </div>
   </nav>
 
-  CHANGE
-
-  Another change
+  VERY NEW CHANGE
 
   <header class="bg-primary text-white">
     <div class="container text-center">
