--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top" img src"logoTR.png" alt="Taco Mensch"></a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">
+        <img src="images/logoTR.png" alt="Taco Mensch">
+      </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
